--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -168,3 +168,11 @@
   font-weight: 400;
   line-height: 100%;
 }
+
+.law-text {
+  font-family: 'DM Sans';
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: -0.025em;
+}
