--- a/src/scss/desktop-states.scss
+++ b/src/scss/desktop-states.scss
@@ -526,9 +526,45 @@
     text-decoration: underline solid var.$blue;
   }
 
+  &--tel {
+
+    &:hover, &:focus {
+
+      &::before {
+        will-change: transform;
+        animation: phone 0.5s;
+      }
+    }
+  }
+
+  &--mail {
+
+    &:hover, &:focus {
+
+      &::before {
+        will-change: transform;
+        animation: mail 0.5s;
+      }
+    }
+  }
+
   &:active {
     transition: all 0.08s;
     color: var.$yellow;
     text-decoration: underline solid var.$yellow;
+  }
+
+  @keyframes phone {
+    0%{transform: rotate(0deg);}
+    25%{transform: rotate(20deg);}
+    50%{transform: rotate(-20deg);}
+    75%{transform: rotate(20deg);}
+    100%{transform: rotate(0deg);}
+  }
+
+  @keyframes mail {
+    0%{transform: scale(1) translateY(0px);}
+    50%{transform: scale(1.25) translateY(1px);}
+    100%{transform: scale(1) translateY(0px);}
   }
 }
